# DigitalImageProcessing

./: README.md
pertemuan1/: Installation.txt
pertemuan10_deteksi_tepi/percobaan1/: CMakeLists.txt  main.cpp
pertemuan10_deteksi_tepi/percobaan2/: CMakeLists.txt  main.cpp
pertemuan10_deteksi_tepi/percobaan3/: CMakeLists.txt  main.cpp
pertemuan10_deteksi_tepi/percobaan4/: CMakeLists.txt  main.cpp
pertemuan10_deteksi_tepi/percobaan5/: CMakeLists.txt  main.cpp
pertemuan2/: Tugas.txt
pertemuan2/praktikum0_pegolahan_citra/: CMakeLists.txt  main.cpp
pertemuan2/praktikum1_informasi_citra/: main.cpp
pertemuan2/praktikum2_at/: main.cpp
pertemuan2/praktikum3_ptr/: main.cpp
pertemuan2/praktikum4_shallow_and_deep_copy/: main.cpp
pertemuan2/praktikum5_roi/: main.cpp
pertemuan2/tugas1_benchmark/: main.cpp
pertemuan2/tugas2_image_mosaic/: main.cpp
pertemuan2/tugas3_histogram_equalization_manual/: main.cpp
pertemuan2/tugas4_memory_profiling/: main.cpp
pertemuan3/StudyKasus1_ganti_warna_objek/: Soal1.txt  main.cpp
pertemuan3/StudyKasus2_deteksi_blue_screen/: Soal2.txt  main.cpp
pertemuan3/StudyKasus3_sortir_kematangan_tomat/: main.cpp
pertemuan3/StudyKasus4_sensor_privasi_otomatis/: Soal4.txt  main.cpp
pertemuan3/praktikum1_konversi_ruang_warna_dasr/: main.cpp
pertemuan3/praktikum2_analisis_channel_warna/: main.cpp
pertemuan3/praktikum3_deteksi_warna_merah/: main.cpp
pertemuan3/praktikum4_deteksi_warna_kulit/: main.cpp
pertemuan4/: CMakeLists.txt  PenjelasanPointer.txt
pertemuan4/Inc/: arithmetic_operation.h  arithmetic_operation_at.h  arithmetic_operation_ptr.h  geometric_operation.h  logical_operation.h  pixel_level_operation.h  pixel_level_operation_at.h  pixel_level_operation_ptr.h
pertemuan4/Src/: arithmetic_operation.cpp  arithmetic_operation_at.cpp  arithmetic_operation_ptr.cpp  geometric_operation.cpp  logical_operation.cpp  main.cpp  pixel_level_operation.cpp  pixel_level_operation_at.cpp  pixel_level_operation_ptr.cpp
pertemuan5/histogram_qt/: CMakeLists.txt  main.cpp
(+9 files in other folders)
